--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -29,15 +29,15 @@
         <!-- ============================================================== -->
         <!-- Header part -->
         <!-- ============================================================== -->
-        <header class="topbar">
+        <header class="land-topbar">
             <div class="container">
                 <!-- Start Header -->
-                <div class="header p-t-10 p-b-10">
+                <div class="header">
                     <nav class="navbar navbar-expand-md navbar-light">
                         <a class="navbar-brand" href="#">
                             <img src="assets/images/logo-icon.png" alt="logo">
                             <span>
-                                <img src="assets/images/logo-text.png" align="logo">
+                                <img src="assets/images/logo-text.png" alt="logo">
                             </span>
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,10 +45,10 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto">
-                                <li class="nav-item p-l-15">
+                                <li class="nav-item pr-3">
                                     <a href="https://wrappixel.com/templates/xtremeadmin/" class="btn btn-custom btn-outline-info" target="_blank">Free Download</a>
                                 </li>
-                                <li class="nav-item p-l-15">
+                                <li class="nav-item">
                                     <a href="https://wrappixel.com/templates/xtremeadmin/" class="btn btn-custom btn-info" target="_blank">Check Pro Version</a>
                                 </li>
                             </ul>
@@ -65,13 +65,116 @@
         <!-- ============================================================== -->
         <!-- Page wrapper part -->
         <!-- ============================================================== -->
-        <div class="page-wrapper">
+        <div class="content-wrapper">
             <!-- ============================================================== -->
             <!-- Demos part -->
             <!-- ============================================================== -->
             <section class="spacer bg-light">
                 <div class="container">
-                    <h2></h2>
+                    <div class="row justify-content-md-center pt-5">
+                        <div class="col-md-9 text-center">
+                            <h2 class="text-dark">Create Stunning User Inteface for your <span class="font-bold">Applications</span> & <span class="font-bold">Products</span> with <span class="border-bottom border-dark"> Nice Admin</span></h2>
+                        </div>
+                    </div>
+                    <div class="row pt-5">
+                        <div class="col-md-6">
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="text-center">
+                                        <h2 class="text-dark version-title">Lite Version</h2>
+                                        <h4 class="text-success version-title">Free Forever</h4>
+                                    </div>
+                                    <div class="live-box bg-light text-center mt-4">
+                                        <img class="shadow img-fluid" src="images/pro-version.png" alt="d4">
+                                        <div class="overlay">
+                                            <a class="btn btn-danger live-btn" href="../html/ltr/index.html" target="_blank">Live Preview</a>
+                                        </div>
+                                    </div>
+                                    <p class="text-muted mt-4 font-16">Nice Admin Lite is basic yet very useful bootstrap 4 dashbaord template for your projects.If you are looking for modern yet clean admin template for your backend project. Nice Admin is the right choice for you. If your application requires more options. We like to suggest you the pro version.</p>
+                                    <div class="row text-muted">
+                                        <div class="col-md-6">
+                                            <ul class="pl-3 lite-list">
+                                                <li class="pb-2">1 Basic Dashboard</li>
+                                                <li class="pb-2">7+ Pages Template</li>
+                                                <li class="pb-2">10+ UI Components</li>
+                                                <li class="pb-2">Bootstrap 4 Version</li>
+                                                <li class="pb-2">Font Awesome Icons</li>
+                                                <li class="pb-2">Fully Responsive Pages</li>
+                                                <li class="text-dark">No Support Provided</li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <ul class="pl-3 lite-list">
+                                                <li class="pb-2">SaSS Base CSS</li>
+                                                <li class="pb-2">Easy To Customize</li>
+                                                <li class="pb-2">Basic Table Examples</li>
+                                                <li class="pb-2">Profile Page Included</li>
+                                                <li class="pb-2">Google Map</li>
+                                                <li class="text-dark pb-2">No Documentation</li>
+                                                <li class="text-dark">Backlink Required</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="text-center mt-4">
+                                        <a href="https://wrappixel.com/templates/xtremeadmin/" class="btn btn-custom btn-outline-info" target="_blank">Free Download</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card pro-demo">
+                                <div class="card-body">
+                                    <div class="text-center">
+                                        <h2 class="text-info version-title">Pro Version</h2>
+                                        <h4 class="text-dark version-title">$29 Only</h4>
+                                    </div>
+                                    <div class="live-box bg-light text-center mt-4">
+                                        <img class="shadow img-fluid" src="images/pro-version.png" alt="d4">
+                                        <div class="overlay">
+                                            <a class="btn btn-danger live-btn" href="../html/ltr/index.html" target="_blank">Live Preview</a>
+                                        </div>
+                                    </div>
+                                    <div class="row text-dark mt-4">
+                                        <div class="col-md-6">
+                                            <ul class="pl-3 pro-list">
+                                                <li class="pb-2"><span>3 Colorful Dashboards</span></li>
+                                                <li class="pb-2"><span>1500+ Page Templates</li>
+                                                <li class="pb-2"><span>500+ UI Components</span></li>
+                                                <li class="pb-2"><span>100+ Integrated Plugins</span></li>
+                                                <li class="pb-2"><span>Front-end Landing Page</span></li>
+                                                <li class="pb-2"><span>1 Year Premium Support</span></li>
+                                                <li class="pb-2"><span>Right-to-Left(RTL) Verion</span></li>
+                                                <li class="pb-2"><span>Unlimited Colors</span></li>
+                                                <li class="pb-2"><span>2000+ Font Icons</span></li>
+                                                <li class="pb-2"><span>Lots of Chart Options</span></li>
+                                                <li class="pb-2"><span>Bootstrap 4 Version</span></li>
+                                                <li class="pb-2"><span>Fully Responsive Pages</span></li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <ul class="pl-3 pro-list">
+                                                <li class="pb-2"><span>10+ Unique Demos</span></li>
+                                                <li class="pb-2"><span class="font-12">6+ Ready to Use Applications</span></li>
+                                                <li class="pb-2"><span>Light and Dark Sidebar</span></li>
+                                                <li class="pb-2"><span>Dashboard PSD Files</span></li>
+                                                <li class="pb-2"><span>Lifetime Free Updates</span></li>
+                                                <li class="pb-2"><span>Documentation Provided</span></li>
+                                                <li class="pb-2"><span>Lots of Widgets</span></li>
+                                                <li class="pb-2"><span>Tons of Table Example</span></li>
+                                                <li class="pb-2"><span>Variety of Forms Included</span></li>
+                                                <li class="pb-2"><span>SaSS Base CSS</span></li>
+                                                <li class="pb-2"><span>Easy to Customize</span></li>
+                                                <li class="pb-2"><span>& lots more..</span></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="text-center mt-4">
+                                        <a href="https://wrappixel.com/templates/xtremeadmin/" class="btn btn-custom btn-info" target="_blank">Buy Pro Version</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
@@ -84,6 +187,7 @@
 <!-- All Jquery -->
 <!-- ============================================================== -->
 <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
+<!-- Bootstrap tether Core JavaScript -->
 <script src="../assets/libs/popper.js/dist/umd/popper.min.js"></script>
 <script src="../assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
