--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -19,6 +19,29 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
+<script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-85622565-1', 'auto');
+    ga('send', 'pageview');
+    </script>
+     <!--Start of Zendesk Chat Script-->
+    <script type="text/javascript">
+    window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
+    d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+    _.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute("charset","utf-8");
+    $.src="https://v2.zopim.com/?4gucOY1MlvrcvUVJ9GClgI5JHhmy8CFq";z.t=+new Date;$.
+    type="text/javascript";e.parentNode.insertBefore($,e)})(document,"script");
+    </script>
+    <!--End of Zendesk Chat Script-->
 </head>
 
 <body>
@@ -112,14 +135,14 @@
                                                 <li><i class="mdi mdi-disk"></i>Easy To Customize</li>
                                                 <li><i class="mdi mdi-disk"></i>Basic Table Examples</li>
                                                 <li><i class="mdi mdi-disk"></i>Profile Page Included</li>
-                                                <li><i class="mdi mdi-disk"></i>Google Map</li>
+                                                <li><i class="mdi mdi-disk"></i>Form Basic</li>
                                                 <li class="text-dark "><i class="mdi mdi-disk"></i>No Documentation</li>
                                                 <li class="text-dark"><i class="mdi mdi-disk"></i>Backlink Required</li>
                                             </ul>
                                         </div>
                                     </div>
                                     <div class="text-center mt-4 mb-3">
-                                        <a href="#" class="btn btn-custom btn-outline-info btn-lg" target="_blank">Free Download</a>
+                                        <a href="https://wrappixel.com/templates/niceadmin-lite/" class="btn btn-custom btn-outline-info btn-lg" target="_blank">Free Download</a>
                                     </div>
                                 </div>
                             </div>
@@ -175,7 +198,7 @@
                                         </div>
                                     </div>
                                     <div class="text-center mt-4 mb-3">
-                                        <a href="#" class="btn btn-custom btn-info btn-lg" target="_blank">Buy Pro Version</a>
+                                        <a href="https://wrappixel.com/templates/niceadmin/" class="btn btn-custom btn-info btn-lg" target="_blank">Buy Pro Version</a>
                                     </div>
                                 </div>
                             </div>
