--- a/html/ltr/starter-kit.html
+++ b/html/ltr/starter-kit.html
@@ -111,6 +111,9 @@
                     <!-- Right side toggle and nav items -->
                     <!-- ============================================================== -->
                     <ul class="navbar-nav float-right">
+                        <li class="nav-item m-r-20">
+                            <a href="javascript: void(0)" class="btn btn-block btn-danger m-t-15">Upgrade to Pro</a>
+                        </li>
                         <!-- ============================================================== -->
                         <!-- User profile and search -->
                         <!-- ============================================================== -->
@@ -153,6 +156,12 @@
                                 <span class="hide-menu">Profile</span>
                             </a>
                         </li>
+                         <li class="sidebar-item">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="form-basic.html" aria-expanded="false">
+                                <i class="mdi mdi-arrange-bring-forward"></i>
+                                <span class="hide-menu">Form Basic</span>
+                            </a>
+                        </li>
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link" href="table-basic.html" aria-expanded="false">
                                 <i class="mdi mdi-border-none"></i>
@@ -176,6 +185,9 @@
                                 <i class="mdi mdi-alert-outline"></i>
                                 <span class="hide-menu">404</span>
                             </a>
+                        </li>
+                        <li class="text-center p-40 upgrade-btn">
+                            <a href="javascript: void(0)" class="btn btn-block btn-danger text-white">Upgrade to Pro</a>
                         </li>
                     </ul>
                 </nav>
