--- a/html/ltr/icon-material.html
+++ b/html/ltr/icon-material.html
@@ -111,6 +111,9 @@
                     <!-- Right side toggle and nav items -->
                     <!-- ============================================================== -->
                     <ul class="navbar-nav float-right">
+                        <li class="nav-item m-r-20">
+                            <a href="javascript: void(0)" class="btn btn-block btn-danger m-t-15">Upgrade to Pro</a>
+                        </li>
                         <!-- ============================================================== -->
                         <!-- User profile and search -->
                         <!-- ============================================================== -->
@@ -182,6 +185,9 @@
                                 <i class="mdi mdi-alert-outline"></i>
                                 <span class="hide-menu">404</span>
                             </a>
+                        </li>
+                        <li class="text-center p-40 upgrade-btn">
+                            <a href="javascript: void(0)" class="btn btn-block btn-danger text-white">Upgrade to Pro</a>
                         </li>
                     </ul>
                 </nav>
