--- a/nice-html/ltr/table-basic.html
+++ b/nice-html/ltr/table-basic.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="wrappixel, admin dashboard, html css dashboard, web dashboard, bootstrap 4 admin, bootstrap 4, css3 dashboard, bootstrap 4 dashboard, AdminWrap lite admin bootstrap 4 dashboard, frontend, responsive bootstrap 4 admin template, Nice admin lite design, Nice admin lite dashboard bootstrap 4 dashboard template">
-    <meta name="description" content="Nice Admin Lite Free Version is powerful and clean admin dashboard template, inpired from Bootstrap Framework">
+    <meta name="keywords"
+        content="wrappixel, admin dashboard, html css dashboard, web dashboard, bootstrap 4 admin, bootstrap 4, css3 dashboard, bootstrap 4 dashboard, AdminWrap lite admin bootstrap 4 dashboard, frontend, responsive bootstrap 4 admin template, Nice admin lite design, Nice admin lite dashboard bootstrap 4 dashboard template">
+    <meta name="description"
+        content="Nice Admin Lite is powerful and clean admin dashboard template, inpired from Bootstrap Framework">
     <meta name="robots" content="noindex,nofollow">
-        <title>Nice Admin Lite Free Version Template by WrapPixel</title>
+    <title>Nice Admin Lite Template by WrapPixel</title>
     <link rel="canonical" href="https://www.wrappixel.com/templates/niceadmin-lite/" />
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/images/favicon.png">
     <!-- Custom CSS -->
     <link href="../../dist/css/style.min.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -36,7 +38,8 @@
     <!-- ============================================================== -->
     <!-- Main wrapper - style you can find in pages.scss -->
     <!-- ============================================================== -->
-    <div id="main-wrapper" data-navbarbg="skin6" data-theme="light" data-layout="vertical" data-sidebartype="full" data-boxed-layout="full">
+    <div id="main-wrapper" data-navbarbg="skin6" data-theme="light" data-layout="vertical" data-sidebartype="full"
+        data-boxed-layout="full">
         <!-- ============================================================== -->
         <!-- Topbar header - style you can find in pages.scss -->
         <!-- ============================================================== -->
@@ -76,7 +79,8 @@
                     <!-- ============================================================== -->
                     <!-- Toggle which is visible on mobile only -->
                     <!-- ============================================================== -->
-                    <a class="topbartoggler d-block d-md-none waves-effect waves-light" href="javascript:void(0)" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    <a class="topbartoggler d-block d-md-none waves-effect waves-light" href="javascript:void(0)"
+                        data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="ti-more"></i>
                     </a>
@@ -117,11 +121,17 @@
                         <!-- User profile and search -->
                         <!-- ============================================================== -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../../assets/images/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
+                            <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href=""
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img
+                                    src="../../assets/images/users/1.jpg" alt="user" class="rounded-circle"
+                                    width="31"></a>
                             <div class="dropdown-menu dropdown-menu-right user-dd animated">
-                                <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i> My Profile</a>
-                                <a class="dropdown-item" href="javascript:void(0)"><i class="ti-wallet m-r-5 m-l-5"></i> My Balance</a>
-                                <a class="dropdown-item" href="javascript:void(0)"><i class="ti-email m-r-5 m-l-5"></i> Inbox</a>
+                                <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i>
+                                    My Profile</a>
+                                <a class="dropdown-item" href="javascript:void(0)"><i class="ti-wallet m-r-5 m-l-5"></i>
+                                    My Balance</a>
+                                <a class="dropdown-item" href="javascript:void(0)"><i class="ti-email m-r-5 m-l-5"></i>
+                                    Inbox</a>
                             </div>
                         </li>
                         <!-- ============================================================== -->
@@ -144,43 +154,50 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
                         <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="index.html" aria-expanded="false">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="index.html"
+                                aria-expanded="false">
                                 <i class="mdi mdi-av-timer"></i>
                                 <span class="hide-menu">Dashboard</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="pages-profile.html" aria-expanded="false">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="pages-profile.html"
+                                aria-expanded="false">
                                 <i class="mdi mdi-account-network"></i>
                                 <span class="hide-menu">Profile</span>
                             </a>
                         </li>
-                         <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="form-basic.html" aria-expanded="false">
+                        <li class="sidebar-item">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="form-basic.html"
+                                aria-expanded="false">
                                 <i class="mdi mdi-arrange-bring-forward"></i>
                                 <span class="hide-menu">Form Basic</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="table-basic.html" aria-expanded="false">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="table-basic.html"
+                                aria-expanded="false">
                                 <i class="mdi mdi-border-none"></i>
                                 <span class="hide-menu">Table</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="icon-material.html" aria-expanded="false">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="icon-material.html"
+                                aria-expanded="false">
                                 <i class="mdi mdi-face"></i>
                                 <span class="hide-menu">Icon</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="starter-kit.html" aria-expanded="false">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="starter-kit.html"
+                                aria-expanded="false">
                                 <i class="mdi mdi-file"></i>
                                 <span class="hide-menu">Blank</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="error-404.html" aria-expanded="false">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="error-404.html"
+                                aria-expanded="false">
                                 <i class="mdi mdi-alert-outline"></i>
                                 <span class="hide-menu">404</span>
                             </a>
@@ -235,8 +252,13 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Default Table</h4>
-                                <h6 class="card-subtitle">Using the most basic table markup, here’s how <code>.table</code>-based tables look in Bootstrap. All table styles are inherited in Bootstrap 4, meaning any nested tables will be styled in the same manner as the parent.</h6>
-                                <h6 class="card-title m-t-40"><i class="m-r-5 font-18 mdi mdi-numeric-1-box-multiple-outline"></i> Table With Outside Padding</h6>
+                                <h6 class="card-subtitle">Using the most basic table markup, here’s how
+                                    <code>.table</code>-based tables look in Bootstrap. All table styles are inherited
+                                    in Bootstrap 4, meaning any nested tables will be styled in the same manner as the
+                                    parent.</h6>
+                                <h6 class="card-title m-t-40"><i
+                                        class="m-r-5 font-18 mdi mdi-numeric-1-box-multiple-outline"></i> Table With
+                                    Outside Padding</h6>
                                 <div class="table-responsive">
                                     <table class="table">
                                         <thead>
@@ -269,7 +291,9 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                <h6 class="card-title"><i class="m-r-5 font-18 mdi mdi-numeric-2-box-multiple-outline"></i> Table Without Outside Padding</h6>
+                                <h6 class="card-title"><i
+                                        class="m-r-5 font-18 mdi mdi-numeric-2-box-multiple-outline"></i> Table Without
+                                    Outside Padding</h6>
                             </div>
                             <div class="table-responsive">
                                 <table class="table">
@@ -309,7 +333,8 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Table Header</h4>
-                                <h6 class="card-subtitle">Similar to tables, use the modifier classes .thead-light to make <code>&lt;thead&gt;</code>s appear light.</h6>
+                                <h6 class="card-subtitle">Similar to tables, use the modifier classes .thead-light to
+                                    make <code>&lt;thead&gt;</code>s appear light.</h6>
                             </div>
                             <div class="table-responsive">
                                 <table class="table">
@@ -349,7 +374,8 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Striped rows</h4>
-                                <h6 class="card-subtitle">Use <code>.table-striped</code> to add zebra-striping to any table row within the <code>&lt;tbody&gt;</code>.</h6>
+                                <h6 class="card-subtitle">Use <code>.table-striped</code> to add zebra-striping to any
+                                    table row within the <code>&lt;tbody&gt;</code>.</h6>
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-striped">
@@ -389,7 +415,8 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Boredered Table</h4>
-                                <h6 class="card-subtitle">Add <code>.table-bordered</code> for borders on all sides of the table and cells.</h6>
+                                <h6 class="card-subtitle">Add <code>.table-bordered</code> for borders on all sides of
+                                    the table and cells.</h6>
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-bordered">
@@ -428,7 +455,8 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Hoverable Rows</h4>
-                                <h6 class="card-subtitle">Add <code>.table-hover</code> to enable a hover state on table rows within a <code>&lt;tbody&gt;</code>.</h6>
+                                <h6 class="card-subtitle">Add <code>.table-hover</code> to enable a hover state on table
+                                    rows within a <code>&lt;tbody&gt;</code>.</h6>
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-hover">
@@ -467,7 +495,8 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Contextual Table</h4>
-                                <h6 class="card-subtitle">Use contextual classes to color table rows or individual cells.</h6>
+                                <h6 class="card-subtitle">Use contextual classes to color table rows or individual
+                                    cells.</h6>
                             </div>
                             <div class="table-responsive">
                                 <table class="table">
@@ -538,7 +567,9 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Table With Caption</h4>
-                                <h6 class="card-subtitle">A <code>&lt;caption&gt;</code> functions like a heading for a table. It helps users with screen readers to find a table and understand what it’s about and decide if they want to read it.</h6>
+                                <h6 class="card-subtitle">A <code>&lt;caption&gt;</code> functions like a heading for a
+                                    table. It helps users with screen readers to find a table and understand what it’s
+                                    about and decide if they want to read it.</h6>
                                 <div class="table-responsive">
                                     <table class="table">
                                         <caption>List of users</caption>
@@ -579,7 +610,11 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Responsive tables</h4>
-                                <h6 class="card-subtitle">Responsive tables allow tables to be scrolled horizontally with ease. Make any table responsive across all viewports by wrapping a <code>.table</code> with <code>.table-responsive</code>. Or, pick a maximum breakpoint with which to have a responsive table up to by using <code>.table-responsive{-sm|-md|-lg|-xl}</code>.</h6>
+                                <h6 class="card-subtitle">Responsive tables allow tables to be scrolled horizontally
+                                    with ease. Make any table responsive across all viewports by wrapping a
+                                    <code>.table</code> with <code>.table-responsive</code>. Or, pick a maximum
+                                    breakpoint with which to have a responsive table up to by using
+                                    <code>.table-responsive{-sm|-md|-lg|-xl}</code>.</h6>
                             </div>
                             <div class="table-responsive">
                                 <table class="table">
@@ -707,7 +742,9 @@
                         <div class="card">
                             <div class="card-body">
                                 <h4 class="card-title">Breakpoint Specific</h4>
-                                <h6 class="card-subtitle">Use <code>.table-responsive{-sm|-md|-lg|-xl}</code> as needed to create responsive tables up to a particular breakpoint. From that breakpoint and up, the table will behave normally and not scroll horizontally.</h6>
+                                <h6 class="card-subtitle">Use <code>.table-responsive{-sm|-md|-lg|-xl}</code> as needed
+                                    to create responsive tables up to a particular breakpoint. From that breakpoint and
+                                    up, the table will behave normally and not scroll horizontally.</h6>
                                 <div class="table-responsive-sm">
                                     <table class="table">
                                         <thead>
